# conclave

./: .codecov.yml  .gitignore  Cargo.toml  LICENSE  README.md  roadmap.md
.cargo/: config.toml
.github/workflows/: ci.yml
crates/client/: Cargo.toml  README.md  build.rs
crates/client/src/: config.rs  conn.rs  gui.rs  lib.rs  main.rs  schema.sql
crates/common/: Cargo.toml  README.md
crates/common/src/: lib.rs  net.rs  serde.rs  server.rs  tracker.rs
crates/server/: Cargo.toml  README.md
crates/server/src/: lib.rs  main.rs  schema.sql
crates/tracker/: Cargo.toml  README.md
crates/tracker/src/: lib.rs  main.rs
testing/: Cargo.toml
testing/src/: lib.rs  testing.rs
