[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
# Internal
conclave-common = { path = "crates/common", default-features = false }
conclave-tracker = { path = "crates/tracker", default-features = false }

# External
anyhow = { version = "1.0.101", default-features = false }
bytes = { version = "1.11.1", default-features = false }
chrono = { version = "0.4.43", default-features = false }
clap = { version = "4.5.57", default-features = false }
futures = { version = "0.3.31", default-features = false }
postcard = { version = "1.1.3", default-features = false }
semver = { version = "1.0.27", default-features = false }
serde = { version = "1.0.228", default-features = false }
tokio = { version = "1.49.0", default-features = false }
tokio-util = { version = "0.7.18", default-features = false }
tracing = { version = "0.1.44", default-features = false }
tracing-subscriber = { version = "0.3.22", default-features = false }

[workspace.package]
authors = ["Richard Zak <richard.j.zak@gmail.com>"]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/rjzak/conclave"
version = "0.0.0"

[profile.release]
codegen-units = 1
lto = true
strip = true
