[workspace]
members = ["crates/*", "testing"]
resolver = "3"

[workspace.dependencies]
# Internal
conclave-client = { path = "crates/client", default-features = false }
conclave-common = { path = "crates/common", default-features = false }
conclave-server = { path = "crates/server", default-features = false }
conclave-tracker = { path = "crates/tracker", default-features = false }

# External
anyhow = { version = "1.0.101", default-features = false }
async-sqlite = { version = "0.5.6", default-features = false }
bytes = { version = "1.11.1", default-features = false }
chacha20poly1305 = { version = "0.10.1", default-features = false }
chrono = { version = "0.4.43", default-features = false }
clap = { version = "4.5.57", default-features = false }
dashmap = { version = "6.1.0", default-features = false }
ed25519-dalek = { version = "2.2.0", default-features = false }
futures = { version = "0.3.31", default-features = false }
hex = { version = "0.4.3", default-features = false }
hkdf = { version = "0.12.4", default-features = false }
postcard = { version = "1.1.3", default-features = false }
rand = { version = "0.8.5", default-features = false }
semver = { version = "1.0.27", default-features = false }
serde = { version = "1.0.228", default-features = false }
sha2 = { version = "0.10.9", default-features = false }
tempdir = { version = "0.3.7", default-features = false }
tokio = { version = "1.49.0", default-features = false }
tokio-util = { version = "0.7.18", default-features = false }
tracing = { version = "0.1.44", default-features = false }
tracing-subscriber = { version = "0.3.22", default-features = false }
uuid = { version = "1.21.0", default-features = false }
x25519-dalek = { version = "2.0.1", default-features = false }
zeroize = { version = "1.8.2", default-features = false }

[workspace.package]
authors = ["Richard Zak <richard.j.zak@gmail.com>"]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/rjzak/conclave"
version = "0.0.0"

[profile.release]
codegen-units = 1
lto = true
strip = true
