[package]
name = "conclave-client"
build = "../../build.rs"
description = "Client application for the Conclave communications environment"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
# Internal
conclave-common = { workspace = true }

# External
anyhow = { workspace = true, features = ["std"] }
async-sqlite = { workspace = true, features = ["bundled", "fallible_uint"] }
bytes = { workspace = true, features = ["std"] }
clap = { workspace = true, features = ["color", "derive", "std", "suggestions"] }
dashmap = { workspace = true, features = ["inline"] }
futures = { workspace = true, features = ["alloc", "std"] }
postcard = { workspace = true, features = ["alloc", "use-std"] }
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-util = { workspace = true, features = ["codec"] }
tracing = { workspace = true, features = ["attributes", "max_level_info", "std"] }

[build-dependencies]
chrono = { workspace = true, features = ["now"] }
