[package]
name = "conclave-client"
build = "build.rs"
description = "Client application for the Conclave communications environment"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
# Internal
conclave-common = { workspace = true }

# External
anyhow = { workspace = true, features = ["std"] }
bytes = { workspace = true, features = ["std"] }
clap = { workspace = true, features = ["color", "derive", "help", "std", "suggestions"] }
dashmap = { workspace = true, features = ["inline"] }
futures = { workspace = true, features = ["alloc", "std"] }
home = { workspace = true }
postcard = { workspace = true, features = ["alloc", "use-std"] }
serde = { workspace = true, features = ["alloc", "derive", "std"] }
serde_json = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-util = { workspace = true, features = ["codec"] }
toml = { workspace = true, features = ["default", "parse"] }
tracing = { workspace = true, features = ["attributes", "max_level_info", "std"] }

[build-dependencies]
chrono = { workspace = true, features = ["now"] }
