[package]
name = "conclave-client"
build = "build.rs"
description = "Client application for the Conclave communications environment"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
# Internal
conclave-common = { workspace = true }

# External
anyhow = { workspace = true, features = ["std"] }
bytes = { workspace = true, features = ["std"] }
clap = { workspace = true, features = ["color", "derive", "help", "std", "suggestions"] }
chrono = { workspace = true, features = ["clock", "serde", "std"] }
dashmap = { workspace = true, features = ["inline"] }
eframe = { workspace = true, features = ["accesskit", "default_fonts", "serde", "wayland", "wgpu", "x11"] }
futures = { workspace = true, features = ["alloc", "std"] }
home = { workspace = true }
pqcrypto-mldsa = { workspace = true, features = ["serde"] }
semver = { workspace = true }
serde = { workspace = true, features = ["alloc", "derive", "std"] }
serde_json = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-util = { workspace = true, features = ["codec"] }
toml = { workspace = true, features = ["default", "parse"] }
tracing = { workspace = true, features = ["attributes", "max_level_info", "std"] }
wgpu = { workspace = true, features = ["std", "vulkan"] }
zeroize = { workspace = true, features = ["aarch64", "derive", "serde"] }

[target.'cfg(target_os = "macos")'.dependencies]
wgpu = { workspace = true, features = ["metal", "vulkan-portability"] }

[target.'cfg(target_os = "windows")'.dependencies]
wgpu = { workspace = true, features = ["dx12"] }

[build-dependencies]
chrono = { workspace = true, features = ["now"] }
