[package]
name = "conclave-common"
description = "Common data structures for the Conclave communications environment"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true, features = ["std"] }
chacha20poly1305 = { workspace = true, features = ["alloc", "getrandom"] }
ed25519-dalek = { workspace = true, features = ["serde"] }
hkdf = { workspace = true }
rand = { workspace = true, features = ["getrandom", "std_rng"] }
semver = { workspace = true, features = ["serde", "std"] }
serde = { workspace = true, features = ["alloc", "derive", "std"] }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["net", "io-util"] }
x25519-dalek = { workspace = true, features = ["zeroize"] }
zeroize = { workspace = true, features = ["aarch64", "derive", "serde"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
