[package]
name = "conclave-server"
build = "../../build.rs"
description = "Server application and library for the Conclave communications environment"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
# Internal
conclave-common = { workspace = true }

# External
anyhow = { workspace = true, features = ["std"] }
async-sqlite = { workspace = true, features = ["bundled", "fallible_uint"] }
bytes = { workspace = true, features = ["std"] }
clap = { workspace = true, features = ["color", "derive", "std", "suggestions"] }
ed25519-dalek = { workspace = true, features = ["serde"] }
futures = { workspace = true, features = ["alloc", "std"] }
hex = { workspace = true, features = ["alloc", "std"] }
postcard = { workspace = true, features = ["alloc", "use-std"] }
semver = { workspace = true }
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "time"] }
tokio-util = { workspace = true, features = ["codec"] }
tracing = { workspace = true, features = ["attributes", "max_level_info", "std"] }
tracing-subscriber = { workspace = true, features = ["alloc", "fmt", "std"] }

[build-dependencies]
chrono = { workspace = true, features = ["now"] }

[dev-dependencies]
conclave-tracker = { workspace = true }
tokio = { workspace = true, features = ["time"] }
