[package]
name = "conclave-server"
build = "build.rs"
description = "Server application and library for the Conclave communications environment"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []
gui = ["dep:eframe", "dep:wgpu"]

[dependencies]
# Internal
conclave-common = { workspace = true }

# External
anyhow = { workspace = true, features = ["std"] }
argon2 = { workspace = true, features = ["alloc", "password-hash", "std"] }
async-sqlite = { workspace = true, features = ["bundled", "fallible_uint"] }
bytes = { workspace = true, features = ["std"] }
clap = { workspace = true, features = ["color", "derive", "help", "std", "suggestions"] }
dashmap = { workspace = true, features = ["inline"] }
dialoguer = { workspace = true, features = ["password"] }
ed25519-dalek = { workspace = true, features = ["serde"] }
eframe = { workspace = true, features = ["accesskit", "default_fonts", "wayland", "wgpu", "x11"], optional = true }
futures = { workspace = true, features = ["alloc", "executor", "std"] }
hex = { workspace = true, features = ["alloc", "std"] }
postcard = { workspace = true, features = ["alloc", "use-std"] }
semver = { workspace = true }
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "time"] }
tokio-util = { workspace = true, features = ["codec"] }
tracing = { workspace = true, features = ["attributes", "max_level_info", "std"] }
uuid = { workspace = true, features = ["v4"] }
wgpu = { workspace = true, features = ["std", "vulkan"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
wgpu = { workspace = true, features = ["metal", "vulkan-portability"], optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
wgpu = { workspace = true, features = ["dx12"], optional = true }

[build-dependencies]
chrono = { workspace = true, features = ["now"] }

[dev-dependencies]
conclave-tracker = { workspace = true }
