[package]
name = "conclave-server"
build = "build.rs"
description = "Server application and library for the Conclave communications environment"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []
gui = ["dep:eframe", "dep:wgpu"]

[dependencies]
# Internal
conclave-common = { workspace = true }

# External
anyhow = { workspace = true, features = ["std"] }
argon2 = { workspace = true, features = ["alloc", "password-hash", "std", "zeroize"] }
async-sqlite = { workspace = true, features = ["bundled", "fallible_uint"] }
base64 = { workspace = true, features = ["alloc"] }
bytes = { workspace = true, features = ["std"] }
chrono = { workspace = true, features = ["clock", "std"] }
clap = { workspace = true, features = ["color", "derive", "help", "std", "suggestions"] }
dialoguer = { workspace = true, features = ["password"] }
ed25519-dalek = { workspace = true, features = ["serde"] }
eframe = { workspace = true, features = ["accesskit", "default_fonts", "wayland", "wgpu", "x11"], optional = true }
futures = { workspace = true, features = ["alloc", "executor", "std"] }
hex = { workspace = true, features = ["alloc", "std"] }
mdns-sd = { workspace = true }
semver = { workspace = true }
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "time"] }
tokio-util = { workspace = true, features = ["codec"] }
tracing = { workspace = true, features = ["attributes", "max_level_info", "std"] }
uuid = { workspace = true, features = ["v4"] }
wgpu = { workspace = true, features = ["std", "vulkan"], optional = true }
zeroize = { workspace = true, features = ["aarch64", "alloc", "std"] }

[target.'cfg(target_os = "macos")'.dependencies]
wgpu = { workspace = true, features = ["metal", "vulkan-portability"], optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
wgpu = { workspace = true, features = ["dx12"], optional = true }

[build-dependencies]
chrono = { workspace = true, features = ["now"] }

[dev-dependencies]
conclave-tracker = { workspace = true }
tempdir = { workspace = true }
