[package]
name = "conclave-tracker"
build = "../../build.rs"
description = "Tracker for the Conclave communications environment, so clients may find servers"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
# Internal
conclave-common = { workspace = true }

# External
anyhow = { workspace = true, features = ["std"] }
bytes = { workspace = true, features = ["std"] }
clap = { workspace = true, features = ["color", "derive", "help", "std", "suggestions"] }
dashmap = { workspace = true, features = ["inline"] }
futures = { workspace = true, features = ["alloc", "std"] }
postcard = { workspace = true, features = ["alloc", "use-std"] }
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "sync"] }
tokio-util = { workspace = true, features = ["codec"] }
tracing = { workspace = true, features = ["attributes", "std"] }

[build-dependencies]
chrono = { workspace = true, features = ["now"] }