[package]
name = "conclave-tracker"
build = "build.rs"
description = "Tracker for the Conclave communications environment, so clients may find servers"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []
gui = ["dep:eframe", "dep:wgpu"]

[dependencies]
# Internal
conclave-common = { workspace = true }

# External
anyhow = { workspace = true, features = ["std"] }
bytes = { workspace = true, features = ["std"] }
clap = { workspace = true, features = ["color", "derive", "help", "std", "suggestions"] }
dashmap = { workspace = true, features = ["inline"] }
eframe = { workspace = true, features = ["accesskit", "default_fonts", "wayland", "wgpu", "x11"], optional = true }
futures = { workspace = true, features = ["alloc", "std"] }
postcard = { workspace = true, features = ["alloc", "use-std"] }
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "sync"] }
tokio-util = { workspace = true, features = ["codec"] }
tracing = { workspace = true, features = ["attributes", "std"] }
wgpu = { workspace = true, features = ["std", "vulkan"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
wgpu = { workspace = true, features = ["metal", "vulkan-portability"], optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
wgpu = { workspace = true, features = ["dx12"], optional = true }

[build-dependencies]
chrono = { workspace = true, features = ["now"] }